@@ -1,3 +1,7 @@
+2007-10-23  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* win/tkWinFont.c: Fixed leak in CreateNamedFont spotted by das.
+
 2007-10-23  Daniel Steffen  <das@users.sourceforge.net>
 
 	* library/demos/combo.tcl:	Aqua GOOBE.
